--- a/cuda/src/Makefile
+++ b/cuda/src/Makefile
@@ -29,20 +29,18 @@ LIBS= -l nvToolsExt
 # such as the one on my cygwin machine.
 
 #mvapich
-MPICFLAGS=-I/usr/local/mvapich/include -pthread 
-MPILDFLAGS=-L/usr/local/mvapich/lib -lmpichcxx -lmpich -lopa -lmpl -lcudart -lcuda -libverbs -ldl -lrt -lm -lpthread
+#MPICFLAGS=-I/usr/local/mvapich/include -pthread 
+#MPILDFLAGS=-L/usr/local/mvapich/lib -lmpichcxx -lmpich -lopa -lmpl -lcudart -lcuda -libverbs -ldl -lrt -lm -lpthread
 #c++ -L/usr/local/cuda//lib64 -L/usr/local/cuda//lib -L/lib -L/lib -L/lib -Wl,-rpath,/lib -L/lib -Wl,-rpath,/lib -L/lib -Wl,-rpath,/lib -L/lib -L/lib -I/usr/local/mvapich/include -L/usr/local/mvapich/lib -lmpichcxx -lmpich -lopa -lmpl -lcudart -lcuda -libverbs -ldl -lrt -lm -lpthread
 
 #openmpi
-#MPICFLAGS=-I/usr/local/openmpi/include -pthread 
-#MPILDFLAGS=-L/usr/local/openmpi/lib -lmpi -lmpi_cxx -ldl -lm -lrt -lnsl -lutil -lm -ldl
+MPICFLAGS=-I$(MPI_HOME)/include -pthread 
+MPILDFLAGS=-L$(MPI_HOME)/lib -lmpi -lmpi_cxx -ldl -lm -lrt -lnsl -lutil -lm -ldl
 
 NVCCFLAGS=-lineinfo -gencode=arch=compute_35,code=\"sm_35,compute_35\" #-gencode=arch=compute_20,code=\"sm_20,compute_20\" 
-
 
 NVCC=nvcc -Xcompiler -fopenmp 
 CXX=mpicxx
 CC=mpiccc
 
 include make_targets
-
