Makefile to build OpenMP4.5 on a GPU platform.

--- a/openmp45/src/Makefile
+++ b/openmp45/src/Makefile
@@ -12,8 +12,8 @@ MINIFE_MATRIX_TYPE = -DMINIFE_CSR_MATRIX
 
 #-----------------------------------------------------------------------
 
-CFLAGS = -O3 -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda \
-	--cuda-path=$(CUDA_ROOT)
+CFLAGS = -v -O3 -fopenmp -fopenmp-targets=nvptx64-nvidia-cuda \
+	--cuda-path=$(CUDA_ROOT) -ffp-contract=fast -fopenmp-nonaliased-maps
 CXXFLAGS = $(CFLAGS)
 
 CPPFLAGS = -I. -I../utils -I../fem $(MINIFE_TYPES) \
