Switched to -fopenmp for backward compatability

--- a/openmp-opt-knl-memkind/src/Makefile.intel.openmp
+++ b/openmp-opt-knl-memkind/src/Makefile.intel.openmp
@@ -16,7 +16,7 @@ MINIFE_MATRIX_TYPE = -DMINIFE_CSR_MATRIX
 
 #-----------------------------------------------------------------------
 
-OPENMP=-qopenmp
+OPENMP=-fopenmp
 CFLAGS = -O3 $(OPENMP) -restrict -mavx
 CXXFLAGS = $(CFLAGS)
 
