--- a/openmp/src/Makefile.intel.openmp
+++ b/openmp/src/Makefile.intel.openmp
@@ -16,7 +16,7 @@ MINIFE_MATRIX_TYPE = -DMINIFE_CSR_MATRIX
 
 #-----------------------------------------------------------------------
 
-CFLAGS = -O3 -qopenmp
+CFLAGS = -O3 -fopenmp
 CXXFLAGS = $(CFLAGS)
 
 CPPFLAGS = -I. -I../utils -I../fem $(MINIFE_TYPES) $(MINIFE_MATRIX_TYPE)
